# module-oracle

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure  configure.ac  qore-oracle-module.spec
cmake/: FindOracle.cmake  config.h.cmake
docs/: doxyfile.tmpl  mainpage.doxygen.tmpl  oracle-module-doc.html
qlib/: OracleExtensions.qm
scratch/: auto-reconnect-test
src/: AQMessagePriv.h  AQQueuePriv.h  Makefile.am  OraColumnValue.cpp  OraColumnValue.h  OraResultSet.cpp  OraResultSet.h  OracleData.cpp  OracleData.h  QC_AQMessage.qpp  QC_AQQueue.qpp  QoreOracleConnection.cpp  QoreOracleConnection.h  QoreOracleStatement.cpp  QoreOracleStatement.h  QorePreparedStatement.cpp  QorePreparedStatement.h  oracle-module.h  oracle.cc  oracle.cpp  oracle.h  oracleobject.cpp  oracleobject.h  ql_oracle.qpp  single-compilation-unit.cpp
src/ocilib/: agent.cpp  callback.cpp  collection.c  collection.cpp  column.c  column.cpp  connection.cpp  date.c  date.cpp  dequeue.cpp  element.c  element.cpp  enqueue.cpp  error.c  error.cpp  exception.c  exception.cpp  file.cpp  hash.c  interval.c  interval.cpp  library.c  library.cpp  list.c  list.cpp  lob.c  lob.cpp  long.c  memory.c  memory.cpp  msg.cpp  mutex.c  mutex.cpp  number.c  number.cpp  object.c  object.cpp  oci_api.h  oci_defs.h  oci_import.h  (+17 more)
test/: aq-test.q  db-test.q  db.qtest  nty.qtest  oracle.qtest  sql-stmt-describe.q  sql-stmt.q  sql-stmt.qtest  stmt.q
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
test/nty/: PACKAGE_BODY_OMQTEST_QORE_TEST.sql  PACKAGE_OMQTEST_QORE_TEST.sql  TABLE_FAMILY_OMQTEST_T_OBJECT_TEST.sql  TYPE_OMQTEST_COL_TEST.sql  TYPE_OMQTEST_COL_TEST_CLOB.sql  TYPE_OMQTEST_COL_TEST_NUM.sql  TYPE_OMQTEST_TEST_OBJECT.sql  TYPE_OMQTEST_TEST_TAB_OBJECT.sql  qorus_test.sql  qorus_test_body.sql  script.sql  test_nty.q  test_nty.qclass  test_nty_clob.qtest  test_nty_clob.sql  test_nty_collection.q  test_nty_commons.q  test_nty_errors.q  test_nty_object.q
